# test-ai

./: .env.example  .gitattributes  .gitignore  API_SPEC.md  README.md  check_job.py  check_sqs_queue.py  purge_sqs_queue.py  pyproject.toml  run.py  run_sqs_worker.py  send_image_test_message.py  send_test_message.py  test.txt  test_api.py  test_bedrock_simple.py  test_client.py  test_hybrid_cache.py  test_keyword_extraction.py  test_mock.py  test_multi_llm_hallucination.py  test_perplexity.py  test_perplexity_fix.py  test_sqs_connection.py  test_sqs_simple.py  test_sqs_with_creds.py  test_token_debug.py
.kiro/settings/: mcp.json
app/: __init__.py  main.py
app/adapters/embedder/: base.py  bedrock_embedder.py  mock_embedder.py
app/adapters/fact_checker/: __init__.py  multi_llm_verifier.py  perplexity_client.py  wikipedia_evidence_verifier.py  wikipedia_mcp.py
app/adapters/judge/: base.py  bedrock_judge.py  mock_judge.py
app/adapters/runner/: base.py  bedrock_runner.py  mock_runner.py  private_runner.py
app/api/routes/: compare.py  debug.py  health.py  jobs.py
app/cache/: cache.py  dynamodb_cache.py  hybrid_cache.py  sqlite_cache.py
app/core/: config.py  data_filter.py  errors.py  hashing.py  logging.py  schemas.py
app/orchestrator/: context.py  pipeline.py
app/orchestrator/stages/: aggregate_stage.py  consistency_stage.py  density_stage.py  embed_stage.py  feedback_stage.py  (+5 more)
app/storage/: dynamodb_s3_repo.py  fromprom_repo.py  repo.py  s3_repo.py  sqlite_repo.py  sqs_worker.py
infrastructure/: private-deployment-guide.md
tests/: test_api.py
